--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,4 @@ kotlin.code.style=official
 org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xmx8192g -XX:MaxPermSize=2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-org.gradle.parallel=true
+#org.gradle.parallel=true
