--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /CraftBukkit_1_19_R2/build
 /CraftBukkit_1_19_R1/build/
 /CraftBukkit_1_19_R3/build/
+/CraftBukkit_1_20_R1/build/
+/CraftBukkit_1_20_R2/build/
+/CraftBukkit_1_20_R3/build/
